Fixed issue with project languages going out of the box

--- a/styles.css
+++ b/styles.css
@@ -734,7 +734,7 @@ body {
     }
 
     .projects .languages p {
-        padding: 0.25rem 2rem;
+        padding: 0.25rem 1rem;
     }
 
     .projects .buttons {
